[package]
name = "rust-server-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
maplit = "1.0.2"
tokio = {version="1.35.1",features=["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
